--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="hello this is site fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+   <com.baidu.mapapi.map.MapView
+      android:id="@+id/bdmap"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+    </com.baidu.mapapi.map.MapView>
 
 </LinearLayout>
