--- a/app/src/main/res/layout/activity_showphoto_layout.xml
+++ b/app/src/main/res/layout/activity_showphoto_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
+    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
