-m基本实现地图功能

--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
 
-   <com.baidu.mapapi.map.MapView
-      android:id="@+id/bdmap"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
-    </com.baidu.mapapi.map.MapView>
+<com.amap.api.maps.MapView
+    android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></com.amap.api.maps.MapView>
+
 
 </LinearLayout>
