--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="大头儿子"
+        android:text="@string/nav_header_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         />
 
